Port to Java 8 / Spigot 1.16.5 universal-jar