@@ -1,6 +1,8 @@
 package io.github.sefiraat.networks.slimefun.network.grid;
 
 import io.github.sefiraat.networks.NetworkStorage;
+import java.util.Arrays;
+import java.util.stream.Collectors;
 import io.github.sefiraat.networks.network.GridItemRequest;
 import io.github.sefiraat.networks.network.NetworkRoot;
 import io.github.sefiraat.networks.network.NodeDefinition;
@@ -229,7 +231,7 @@ public abstract class AbstractGrid extends NetworkObject {
                 return name.contains(cache.getFilter());
             })
             .sorted(cache.getSortOrder() == GridCache.SortOrder.ALPHABETICAL ? ALPHABETICAL_SORT : NUMERICAL_SORT.reversed())
-            .toList();
+            .collect(Collectors.toList());
     }
 
     protected boolean setFilter(@Nonnull Player player, @Nonnull BlockMenu blockMenu, @Nonnull GridCache gridCache, @Nonnull ClickAction action) {
@@ -239,7 +241,7 @@ public abstract class AbstractGrid extends NetworkObject {
             player.closeInventory();
             player.sendMessage(Theme.WARNING + "Type what you would like to filter this grid to");
             ChatUtils.awaitInput(player, s -> {
-                if (s.isBlank()) {
+                if (s.trim().isEmpty()) {
                     return;
                 }
                 gridCache.setFilter(s.toLowerCase(Locale.ROOT));
@@ -374,7 +376,7 @@ public abstract class AbstractGrid extends NetworkObject {
     @Nonnull
     private static List<String> getLoreAddition(int amount) {
         final MessageFormat format = new MessageFormat("{0}Amount: {1}{2}", Locale.ROOT);
-        return List.of(
+        return Arrays.asList(
             "",
             format.format(new Object[]{Theme.CLICK_INFO.getColor(), Theme.PASSIVE.getColor(), amount}, new StringBuffer(), null).toString()
         );
